docs/vocabulary-fulltable/_sources/type/Interval/v1/index.rst.txt
:orphan:

Interval (v1)
=============

.. warning::
   This is not the latest version. The latest version is :doc:`v5 <../v5/index>`.

**Previous Version:** none *(this is the oldest version)*

**URI:** `http://clams.ai/vocabulary/type/Interval/v1 <http://clams.ai/vocabulary/type/Interval/v1>`_

**Shortname:** ``Interval``

**Inherits from:** :doc:`Region (v1) <../../Region/v1/index>`

**Included in vocabulary versions:** :doc:`1.0.0 <../../../1.0.0/index>`, :doc:`1.0.1 <../../../1.0.1/index>`

Also Known As
-------------

This type is also accessible at the following legacy URLs for backward
compatibility:

- `http://mmif.clams.ai/vocabulary/Interval/v1 <http://mmif.clams.ai/vocabulary/Interval/v1>`_
- `http://mmif.clams.ai/0.4.0/vocabulary/Interval/ <http://mmif.clams.ai/0.4.0/vocabulary/Interval/>`_
- `http://mmif.clams.ai/0.4.1/vocabulary/Interval/ <http://mmif.clams.ai/0.4.1/vocabulary/Interval/>`_
- `http://mmif.clams.ai/0.4.2/vocabulary/Interval/ <http://mmif.clams.ai/0.4.2/vocabulary/Interval/>`_


Description
-----------

An annotation over an interval of linear primary data, either a text, a video or audio stream. An Interval may be defined by pointing directly into primary data (by using start and end offsets) or by linking to one or more other Annotations with the targets property. This annotation type is intended to be an abstract type and typically one of the sub types will be used.


Properties
----------

*Properties marked with* **\*** *are required.*


.. list-table::
   :header-rows: 1
   :widths: 15 10 75

   * - Property
     - Type
     - Description
   * - ``end``
     - integer
     - The ending offset in the primary data. This point is exclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point.
   * - ``start``
     - integer
     - The starting offset in the primary data. This point is inclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point.
   * - ``targets``
     - array of string
     - IDs of a sequence of annotations covering the region of primary data referred to by this annotation. Used as an alternative to *start* and *end* to point to component annotations (for example a token sequence) rather than directly into primary data, or to link two or more annotations (for example in a coreference annotation).

*Inherited from* :doc:`Region (v1) <../../Region/v1/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``timeUnit``
     - string
     - Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*.

*Inherited from* :doc:`Annotation (v2) <../../Annotation/v2/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``document``
     - string
     - The identifier of the document that the annotation is over.

*Inherited from* :doc:`Thing (v1) <../../Thing/v1/index>`

.. list-table::
   :header-rows: 0
   :widths: 15 10 75

   * - ``id`` **\***
     - string
     - A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.

JSON Schema
-----------

.. code-block:: json

   {
     "additionalProperties": true,
     "properties": {
       "id": {
         "description": "A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.",
         "type": "string"
       },
       "document": {
         "type": "string",
         "description": "The identifier of the document that the annotation is over."
       },
       "timeUnit": {
         "type": "string",
         "description": "Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*."
       },
       "start": {
         "type": "integer",
         "description": "The starting offset in the primary data. This point is inclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point."
       },
       "end": {
         "type": "integer",
         "description": "The ending offset in the primary data. This point is exclusive. For time intervals, the unit is determined by the *timeUnit* metadata key. For text intervals, the unit is Unicode code point."
       },
       "targets": {
         "items": {
           "type": "string"
         },
         "type": "array",
         "description": "IDs of a sequence of annotations covering the region of primary data referred to by this annotation. Used as an alternative to *start* and *end* to point to component annotations (for example a token sequence) rather than directly into primary data, or to link two or more annotations (for example in a coreference annotation)."
       }
     },
     "required": [
       "id"
     ],
     "type": "object"
   }